# HNS-HashCalc

./: .gitignore  Cargo.toml  README.md
src/: hasher.rs  main.rs
